Update vitae and papers, add news
Signed-off-by: Diogo Luvizon <diogo@luvizon.com>

--- a/index.html
+++ b/index.html
@@ -67,30 +67,46 @@
           <h2>About me</h2>
         </header>
 
-        <p>
-        I received my PhD in Computer Vision and Machine Learning from Paris Seine Université (Université de Cergy-Pontoise), France, in 2019.
-        My thesis was developed in the <a
-          target="_blank" href="http://www-etis.ensea.fr" class="icon">ETIS
-          lab</a> under the supervision of <a target="_blank"
-        href="http://perso-etis.ensea.fr/~picard" class="icon">David Picard</a>
-        and <a target="_blank" href="http://perso-etis.ensea.fr/tabia"
-        class="icon">Hedi Tabia</a> and supported by the Brazilian
-        National Council for Scientific and Technological Development (CNPq).  I
-        received my Master's degree in Applied Computing (Graphics and Computer
-        Vision) from the Federal University of Technology - Paraná (UTFPR),
-        Brazil, in 2015, and my Bachelor's degree in Electronics Engineering
-        also from the UTFPR, in 2011.  In between, I have worked
-        with computer vision applied to embedded and real time systems.
-        Currently, I am Researcher at <a href="https://research.samsung.com/srbr">Samsung R&D Institute Brazil</a>.
+        <div class="8u 12u$(xsmall) work-item">
+          <p class="justified">
+          I received my PhD in Computer Vision and Machine Learning from the CY Cergy Paris University (Université de Cergy-Pontoise), France, in April 2019.
+          My thesis was developed in the <a target="_blank" href="http://www-etis.ensea.fr" class="icon">ETIS Lab</a> under the supervision of <a target="_blank" href="https://davidpicard.github.io/" class="icon">David Picard</a>
+          and <a target="_blank" href="http://perso-etis.ensea.fr/tabia"
+          class="icon">Hedi Tabia</a> and supported by the Brazilian
+          National Council for Scientific and Technological Development (CNPq).  I
+          received my Master's degree in Applied Computing (Graphics and Computer
+          Vision) from the Federal University of Technology - Paraná (UTFPR),
+          Brazil, in 2015, and my Bachelor's degree in Electronics Engineering
+          also from the UTFPR, in 2011.  In between, I have worked
+          with computer vision applied to embedded and real time systems.
+          Since May 2019, I am Researcher at <a href="https://research.samsung.com/srbr">Samsung R&D Institute Brazil</a>.
+          </p>
+        </div>
 
         <h2>Research interests</h2>
-        <p>My research interests are mainly on computer vision and deep
-        learning, specially applied to 3D scenes and humans.
-        </p>
+        <div class="8u 12u$(xsmall) work-item">
+          <p class="justified">
+            My research interests are mainly on Computer Vision and Deep Learning, specially applied to 3D scenes and human understanding.
+          </p>
+        </div>
 
         <ul class="actions">
           <li><a target="_blank" href="data/cv.pdf" class="button">Link to my CV (PDF)</a></li>
         </ul>
+      </section>
+
+      <!-- News -->
+      <section id="news">
+        <h2>News</h2>
+        <p class="8u justified">
+          <ul class="news">
+            <li>Paper accepted to WACV 2021! [<a target="_blank" href="https://arxiv.org/abs/2011.13317">arXiv</a>]</li>
+            <li>Paper accepted to ICIP 2020! [<a target="_blank" href="https://arxiv.org/abs/2010.02680">arXiv</a>]</li>
+            <li>Paper accepted to <b class=showpopup title="17.861 impact factor">TPAMI 2020</b>! [<a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/9007695">IEEE Xplore</a>]</li>
+            <li>Paper accepted to CVPR 2018! [<a target="_blank" href="https://openaccess.thecvf.com/content_cvpr_2018/html/Luvizon_2D3D_Pose_Estimation_CVPR_2018_paper.html">CVF open access</a>]</li>
+          </ul>
+        </p>
+
       </section>
 
       <!-- Publications -->
@@ -100,80 +116,115 @@
         <!--<div class="row">-->
         <div>
 
-          <article class="6u 12u$(xsmall) work-item">
-            <h3>Human pose regression by combining indirect part detection and contextual information</h3>
-            <a href="https://arxiv.org/pdf/1710.02322" target="_blank" class="image fit thumb"><img src="images/cg_2019/cag.png" alt="" /></a>
-            <p><b>Diogo C. Luvizon, Hedi Tabia, David Picard</b>; <i>Computers & Graphics</i>. 2019</p>
+          <article class="8u 12u$(xsmall) work-item">
+            <h3 class=justified>Adaptive Multiplane Image Generation from a Single Internet Picture</h3>
+            <a href="https://arxiv.org/abs/2011.13317" target="_blank" class="image fit thumb">
+              <video controls autoplay loop muted><source src="images/wacv2021.webm" type="video/webm">Your browser does not support HTML video.
+              </video>
+            </a>
+            <p class=justified><b>Diogo C. Luvizon, Gustavo Sutter P. Carvalho, Andreza A. dos Santos, Jhonatas S. Conceicão, Jose L. Flores-Campana, Luis G. L. Decker, Marcos R. Souza, Helio Pedrini, Antonio Joia, Otávio A. B. Penatti</b>. <i>The IEEE Winter Conference on Applications of Computer Vision (WACV)</i>, 2021 (to appear).</p>
             <p>
-              [<a target="_blank" href="https://arxiv.org/pdf/1710.02322.pdf">pdf</a>]
-              [<a target="_blank" href="https://github.com/dluvizon/pose-regression">code</a>]
-              [<a target="_blank" href="data/cg_2019/bib.txt">bibtex</a>]
+              [<a target="_blank" href="https://arxiv.org/pdf/2011.13317.pdf">pdf</a>]
             </p>
           </article>
 
-          <article class="6u 12u$(xsmall) work-item">
+          <article class="8u 12u$(xsmall) work-item">
+            <h3 class=justified>Parallax Motion Effect Generation Through Instance Segmentation And Depth Estimation</h3>
+            <a href="https://ieeexplore.ieee.org/abstract/document/9191168" target="_blank" class="image fit thumb"><img src="images/icip2020.svg" alt="" /></a>
+            <p class=justified><b>Allan Pinto, Manuel A. Córdova, Luis G. L. Decker, Jose L. Flores-Campana, Marcos R. Souza, Andreza A. dos Santos, Jhonatas S. Conceição, Henrique F. Gagliardi, Diogo C. Luvizon, Ricardo da S. Torres, and Helio Pedrini</b>. <i>The IEEE International Conference on Image Processing (ICIP)</i>, 2020.</p>
+            <p>
+              [<a target="_blank" href="https://arxiv.org/pdf/2010.02680.pdf">pdf</a>]
+              [<a target="_blank" href="https://allansp84.github.io/motion-parallax/">project page</a>]
+              [<a target="_blank" href="data/icip2020.txt">bibtex</a>]
+            </p>
+          </article>
+
+          <article class="8u 12u$(xsmall) work-item">
+            <h3 class=justified>Multi-task Deep Learning for Real-Time 3D Human Pose Estimation and Action Recognition</h3>
+            <a href="https://ieeexplore.ieee.org/abstract/document/9007695" target="_blank" class="image fit thumb"><img src="images/tpami2020.jpg" alt="" /></a>
+            <p class=justified><b>Diogo Luvizon, David Picard, Hedi Tabia</b>. <i>The IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</i>, 2020.</p>
+            <p>
+              [<a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/9007695">ieeexplorer</a>]
+              [<a target="_blank" href="https://arxiv.org/pdf/1912.08077.pdf">pdf</a>]
+              [<a target="_blank" href="https://github.com/dluvizon/deephar">code</a>]
+              [<a target="_blank" href="data/tpami2020.txt">bibtex</a>]
+            </p>
+          </article>
+
+          <article class="8u 12u$(xsmall) work-item">
+            <h3>Human pose regression by combining indirect part detection and contextual information</h3>
+            <a href="https://arxiv.org/pdf/1710.02322" target="_blank" class="image fit thumb"><img src="images/cag2019.png" alt="" /></a>
+            <p><b>Diogo C. Luvizon, Hedi Tabia, David Picard</b>. <i>Computers & Graphics</i>, 2019.</p>
+            <p>
+              [<a target="_blank" href="https://arxiv.org/pdf/1710.02322.pdf">pdf</a>]
+              [<a target="_blank" href="https://github.com/dluvizon/pose-regression">code</a>]
+              [<a target="_blank" href="data/cg2019.txt">bibtex</a>]
+            </p>
+          </article>
+
+          <article class="8u 12u$(xsmall) work-item">
             <h3>2D/3D Pose Estimation and Action Recognition Using Multitask Deep Learning</h3>
-            <a href="http://openaccess.thecvf.com/content_cvpr_2017/CameraReady/0131.pdf" target="_blank" class="image fit thumb"><img src="images/cvpr_2018/pic.svg" alt="" /></a>
-            <p><b>Diogo C. Luvizon, David Picard, Hedi Tabia</b>; <i>The IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</i>. 2018</p>
+            <a href="http://openaccess.thecvf.com/content_cvpr_2017/CameraReady/0131.pdf" target="_blank" class="image fit thumb"><img src="images/cvpr2018.svg" alt="" /></a>
+            <p><b>Diogo C. Luvizon, David Picard, Hedi Tabia</b>. <i>The IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</i>, 2018.</p>
             <p>
               [<a target="_blank" href="http://openaccess.thecvf.com/content_cvpr_2018/CameraReady/0131.pdf">pdf</a>]
               [<a target="_blank" href="http://openaccess.thecvf.com/content_cvpr_2018/Supplemental/0131-supp.pdf">supp</a>]
               [<a target="_blank" href="https://www.youtube.com/watch?v=MNEZACbFA4Y">demo</a>]
               [<a target="_blank" href="https://github.com/dluvizon/deephar">code</a>]
-              [<a target="_blank" href="data/cvpr_2018/bib.txt">bibtex</a>]
+              [<a target="_blank" href="data/cvpr2018.txt">bibtex</a>]
             </p>
           </article>
 
-          <article class="6u 12u$(xsmall) work-item">
+          <article class="8u 12u$(xsmall) work-item">
             <h3>Learning features combination for human action recognition from skeleton sequences</h3>
-            <a href="https://hal.archives-ouvertes.fr/hal-01515376/document" target="_blank" class="image fit thumb"><img src="images/prl_2017/pic.png" alt="" /></a>
-            <p><b>Diogo Carbonera Luvizon, Hedi Tabia, David Picard</b>; <i>Pattern Recognition Letters</i>. 2017</p>
+            <a href="https://hal.archives-ouvertes.fr/hal-01515376/document" target="_blank" class="image fit thumb"><img src="images/prl2017.png" alt="" /></a>
+            <p><b>Diogo Carbonera Luvizon, Hedi Tabia, David Picard</b>. <i>Pattern Recognition Letters</i>, 2017.</p>
             <p>
               [<a target="_blank" href="https://hal.archives-ouvertes.fr/hal-01515376/document">pdf</a>]
               [<a target="_blank" href="https://github.com/dluvizon/harskel">code</a>]
-              [<a target="_blank" href="data/prl_2017/bib.txt">bibtex</a>]
+              [<a target="_blank" href="data/prl2017.txt">bibtex</a>]
               [<a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S0167865517300326?via%3Dihub">elsevier</a>]
             </p>
           </article>
 
-          <article class="6u 12u$(xsmall) work-item">
+          <article class="8u 12u$(xsmall) work-item">
             <h3>A Video-Based System for Vehicle Speed Measurement in Urban Roadways</h3>
-            <a href="http://www.dainf.ct.utfpr.edu.br/~rminetto/projects/vehicle-speed/" target="_blank" class="image fit thumb"><img src="images/its_2016/pic.jpg" alt="" /></a>
-            <p><b>Diogo C. Luvizon, Bogdan T. Nassu, Rodrigo Minetto</b>; <i>IEEE Transactions on Intelligent Transportation Systems (ITS)</i>. 2016</p>
+            <a href="http://www.dainf.ct.utfpr.edu.br/~rminetto/projects/vehicle-speed/" target="_blank" class="image fit thumb"><img src="images/its2016.jpg" alt="" /></a>
+            <p><b>Diogo C. Luvizon, Bogdan T. Nassu, Rodrigo Minetto</b>. <i>The IEEE Transactions on Intelligent Transportation Systems (ITS)</i>, 2016.</p>
             <p>
               [<a target="_blank" href="http://www.dainf.ct.utfpr.edu.br/~rminetto/projects/vehicle-speed/Paper_ITS_final.pdf">pdf</a>]
               [<a target="_blank" href="http://www.dainf.ct.utfpr.edu.br/~rminetto/projects/vehicle-speed/OLD/gst-plugin_DETECTOR-MINETTO-2-g534ebc9.tar.bz2">code</a>]
               [<a target="_blank" href="http://www.youtube.com/watch?v=3IaKJuZN55k">demo</a>]
-              [<a target="_blank" href="data/its_2016/bib.txt">bibtex</a>]
+              [<a target="_blank" href="data/its2016.txt">bibtex</a>]
               [<a target="_blank" href="https://ieeexplore.ieee.org/document/7576700/">ieeexplore</a>]
             </p>
           </article>
 
-          <article class="6u 12u$(xsmall) work-item">
+          <article class="8u 12u$(xsmall) work-item">
             <h3>Vehicle speed estimation by license plate detection and tracking</h3>
-            <a href="https://ieeexplore.ieee.org/document/6854869/" target="_blank" class="image fit thumb"><img src="images/icassp_2014/pic.png" alt="" /></a>
-            <p><b>Diogo C. Luvizon, Bogdan T. Nassu, Rodrigo Minetto</b>; <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</i>. 2014</p>
+            <a href="https://ieeexplore.ieee.org/document/6854869/" target="_blank" class="image fit thumb"><img src="images/icassp2014.png" alt="" /></a>
+            <p><b>Diogo C. Luvizon, Bogdan T. Nassu, Rodrigo Minetto</b>. <i>The IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</i>, 2014.</p>
             <p>
-              [<a target="_blank" href="data/icassp_2014/bib.txt">bibtex</a>]
+              [<a target="_blank" href="data/icassp2014.txt">bibtex</a>]
               [<a target="_blank" href="https://ieeexplore.ieee.org/document/6854869/">ieeexplore</a>]
             </p>
           </article>
 
-          <p>For a complete list of publications, please check in my <a target="_blank" href="https://scholar.google.com/citations?user=VZ1Q5v4AAAAJ&hl=fr&oi=ao" class="icon">google scholar</a>.</p>
+          <p class="8u 12u$(xsmall) work-item">For a complete list of publications, please check in my <a target="_blank" href="https://scholar.google.com/citations?user=VZ1Q5v4AAAAJ&hl=fr&oi=ao" class="icon">google scholar</a>.</p>
 
           <h3>Awards and prizes</h3>
 
-          <p>
+          <p class="8u 12u$(xsmall) work-item justified">
             <highlight>1st prize</highlight> on Workshop of Theses and Dissertations (WTD - Master), Conference on Graphics, Patterns and Images (SIBGRAPI), 2016, Brazil.
             Master's thesis available <a target="_blank" href="http://repositorio.utfpr.edu.br/jspui/bitstream/1/1380/1/CT_PPGCA_M_Luvizon%2C%20Diogo%20Carbonera_2015.pdf">here</a>.
           </p>
-          <p>
+          <p class="8u 12u$(xsmall) work-item justified">
             2nd prize on Concurso Latino-Americano de Dissertações de Mestrado (CLTM), Conferência Latino-Americana de Informática (CLEI), 2016, Chile.
           </p>
 
           <h3>Patent</h3>
-            <p>
-              <b>LUVIZON, DIOGO C.</b>; MINETTO, RODRIGO; NASSU, B. T. "Sistema para Medição de Velocidade Instantânea e Média de Veículos por Reconhecimento de Padrões em Imagens e Vídeos Digitais", INPI - Instituto Nacional da Propriedade Industrial, Registro No. <b>BR10201503191</b>, 2015 (Brazil, in portuguese).
+            <p class="8u 12u$(xsmall) work-item justified">
+              <b>LUVIZON, DIOGO C.</b>; MINETTO, RODRIGO; NASSU, B. T. "Sistema para Medição de Velocidade Instantânea e Média de Veículos por Reconhecimento de Padrões em Imagens e Vídeos Digitais", INPI - Instituto Nacional da Propriedade Industrial, Registro No. <b>BR10201503191</b>, 2015 (Brazil, in Portuguese).
             </p>
 
         </div>
@@ -182,14 +233,16 @@
       <!-- Code -->
       <section id="code">
         <h2>Source code </h2>
-        <p>Public source code related to my work is available on
-        <a href="https://github.com/dluvizon" target="_blank">github</a>.
-        Otherwise, a link will appear in my
-        <a href="#publications">publications</a>.</p>
+        <p class="8u 12u$(xsmall) work-item justified">
+          Public source code related to my work is available on
+          <a href="https://github.com/dluvizon" target="_blank">github</a>.<br/>
+          Otherwise, a link will appear in my
+          <a href="#publications">publications</a>.
+        </p>
       </section>
 
       <!-- Teaching -->
-      <section id="teaching">
+      <section id="teaching" class="8u 12u$(xsmall) work-item justified">
         <h2>Teaching</h2>
         <h3>Master (ENSEA)</h3>
         <p>UEC-1-IMD Int. images et multimedia</p>
@@ -210,10 +263,8 @@
                 <li>
                   <h3 class="icon fa-home"><span class="label">Address</span></h3>
                   Diogo C. Luvizon<br />
-                  Office 385<br />
-                  ETIS UMR 8051, ENSEA, CNRS<br />
-                  6 Avenue du Ponceau,<br />
-                  F-95000 Cergy-Pontoise, France
+                  Samsung R&D Institute Brazil<br />
+                  Campinas - SP, Brazil, 13097-104
                 </li>
                 <!--<li>-->
                   <!--<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>-->
@@ -235,10 +286,10 @@
 				<div class="inner">
 					<ul class="icons">
 						<li><a href="#contact" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="https://scholar.google.com/citations?user=VZ1Q5v4AAAAJ&hl=fr&oi=ao" class="icon fa-google"><span class="label">Scholar</span></a></li>
 						<li><a href="https://github.com/dluvizon" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://twitter.com/DiogoLuvizon" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.linkedin.com/in/diogocl" target="_blank" class="icon fa-linkedin"><span class="label">LinkdIn</span></a></li>
-						<!--<li><a href="https://www.instagram.com/diogoluvizon/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>-->
             <li><a href="http://lattes.cnpq.br/9871965222373987" target="_blank" class="icon">Lattes<span class="label">Lattes</span></a></li>
 					</ul>
 					<ul class="copyright">
