Update WACV paper ref
Signed-off-by: Diogo Luvizon <diogo@luvizon.com>

--- a/index.html
+++ b/index.html
@@ -122,9 +122,10 @@
               <video controls autoplay loop muted><source src="images/wacv2021.webm" type="video/webm">Your browser does not support HTML video.
               </video>
             </a>
-            <p class=justified><b>Diogo C. Luvizon, Gustavo Sutter P. Carvalho, Andreza A. dos Santos, Jhonatas S. Conceicão, Jose L. Flores-Campana, Luis G. L. Decker, Marcos R. Souza, Helio Pedrini, Antonio Joia, Otávio A. B. Penatti</b>. <i>The IEEE Winter Conference on Applications of Computer Vision (WACV)</i>, 2021 (to appear).</p>
+            <p class=justified><b>Diogo C. Luvizon, Gustavo Sutter P. Carvalho, Andreza A. dos Santos, Jhonatas S. Conceicão, Jose L. Flores-Campana, Luis G. L. Decker, Marcos R. Souza, Helio Pedrini, Antonio Joia, Otávio A. B. Penatti</b>. <i>The IEEE Winter Conference on Applications of Computer Vision (WACV)</i>, 2021.</p>
             <p>
-              [<a target="_blank" href="https://arxiv.org/pdf/2011.13317.pdf">pdf</a>]
+              [<a target="_blank" href="https://openaccess.thecvf.com/content/WACV2021/html/Luvizon_Adaptive_Multiplane_Image_Generation_From_a_Single_Internet_Picture_WACV_2021_paper.html">the CVF</a>]
+              [<a target="_blank" href="https://arxiv.org/pdf/2011.13317.pdf">arXiv</a>]
             </p>
           </article>
 
