Addd link to CYU
Signed-off-by: Diogo Luvizon <diogo@luvizon.com>

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <div class="8u 12u$(xsmall) work-item">
           <p class="justified">
-          I received my PhD in Computer Vision and Machine Learning from the CY Cergy Paris University (Université de Cergy-Pontoise), France, in April 2019.
+          I received my PhD in Computer Vision and Machine Learning from the <a target="_blank" href="https://www.cyu.fr/" class="icon">CY Cergy Paris University</a> (Université de Cergy-Pontoise), France, in April 2019.
           My thesis was developed in the <a target="_blank" href="http://www-etis.ensea.fr" class="icon">ETIS Lab</a> under the supervision of <a target="_blank" href="https://davidpicard.github.io/" class="icon">David Picard</a>
           and <a target="_blank" href="http://perso-etis.ensea.fr/tabia"
           class="icon">Hedi Tabia</a> and supported by the Brazilian
