--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         <h2>News</h2>
         <p class="8u justified">
           <ul class="news">
+            <li>Paper accepted to ICASSP 2021! [on arxiv soon]</li>
             <li>Paper accepted to WACV 2021! [<a target="_blank" href="https://arxiv.org/abs/2011.13317">arXiv</a>]</li>
             <li>Paper accepted to ICIP 2020! [<a target="_blank" href="https://arxiv.org/abs/2010.02680">arXiv</a>]</li>
             <li>Paper accepted to <b class=showpopup title="17.861 impact factor">TPAMI 2020</b>! [<a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/9007695">IEEE Xplore</a>]</li>
