Add YouTube video for WACV/CVPRW
Signed-off-by: Diogo Luvizon <diogo@luvizon.com>

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
             <p>
               [<a target="_blank" href="https://openaccess.thecvf.com/content/WACV2021/html/Luvizon_Adaptive_Multiplane_Image_Generation_From_a_Single_Internet_Picture_WACV_2021_paper.html">the CVF</a>]
               [<a target="_blank" href="https://arxiv.org/pdf/2011.13317.pdf">arXiv</a>]
+              [<a target="_blank" href="https://www.youtube.com/watch?v=b9hiU0I-Lz4">video</a>]
             </p>
           </article>
 
