--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         <h2>News</h2>
         <p class="8u justified">
           <ul class="news">
+            <li>Our WACV'21 paper will be presented at CVPR'21 Workshop "Learning to Generate 3D Shapes and Scenes" [<a target="_blank" href="https://learn3dg.github.io/">workshop</a>]</li>
             <li>Paper accepted to ICASSP 2021! [<a target="_blank" href="https://arxiv.org/abs/2102.11771">arXiv</a>]</li>
             <li>Paper accepted to WACV 2021! [<a target="_blank" href="https://arxiv.org/abs/2011.13317">arXiv</a>]</li>
             <li>Paper accepted to ICIP 2020! [<a target="_blank" href="https://arxiv.org/abs/2010.02680">arXiv</a>]</li>
