--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="inner">
         <a href="#" class="image avatar"><img src="images/photo.jpeg" alt="" /></a>
         <h1>Diogo C Luvizon</h1>
-        <p>Computer Vision Researcher</p>
+        <p>Computer Vision Researcher @ MPI-INF</p>
 
         <nav></br>
           <a href="#vitae">Vitae</a></br>
@@ -77,9 +77,9 @@
           received my Master's degree in Applied Computing (Graphics and Computer
           Vision) from the Federal University of Technology - Paraná (UTFPR),
           Brazil, in 2015, and my Bachelor's degree in Electronics Engineering
-          also from the UTFPR, in 2011.  In between, I have worked
-          with computer vision applied to embedded and real time systems.
-          Since May 2019, I am Researcher at <a href="https://research.samsung.com/srbr">Samsung R&D Institute Brazil</a>.
+          also from the UTFPR, in 2011.  I have worked
+          with computer vision applied to embedded and real time systems (2011-2015), and with Computer Vision algorithms for on-device applications at <a href="https://research.samsung.com/srbr">Samsung</a> (Researcher).
+          Since Sep. 2021, I am Postdoctoral Researcher at the <a href="https://www.mpi-inf.mpg.de">Max-Planck-Institut für Informatik</a>, working with <a href="https://people.mpi-inf.mpg.de/~theobalt/">Christian Theobalt</a>. See also my <a href="https://people.mpi-inf.mpg.de/~dluvizon">official web page</a> at MPI-INF.
           </p>
         </div>
 
@@ -100,6 +100,7 @@
         <h2>News</h2>
         <p class="8u justified">
           <ul class="news">
+            <li>Sep. 2021: I am moving to <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">MPI-INF</a> as a postdoctoral researcher!
             <li>Our WACV'21 paper will be presented at CVPR'21 Workshop "Learning to Generate 3D Shapes and Scenes" [<a target="_blank" href="https://learn3dg.github.io/">workshop</a>]</li>
             <li>Paper accepted to ICASSP 2021! [<a target="_blank" href="https://arxiv.org/abs/2102.11771">arXiv</a>]</li>
             <li>Paper accepted to WACV 2021! [<a target="_blank" href="https://arxiv.org/abs/2011.13317">arXiv</a>]</li>
