--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         <h2>News</h2>
         <p class="8u justified">
           <ul class="news">
+            <li>Paper accepted to BMVC 2021! [<a target="_blank" href="https://arxiv.org/abs/2110.09380">arXiv</a>] (project page and demo will be available soon)</li>
             <li>Sep. 2021: I am moving to <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">MPI-INF</a> as a postdoctoral researcher!
             <li>Our WACV'21 paper will be presented at CVPR'21 Workshop "Learning to Generate 3D Shapes and Scenes" [<a target="_blank" href="https://learn3dg.github.io/">workshop</a>]</li>
             <li>Paper accepted to ICASSP 2021! [<a target="_blank" href="https://arxiv.org/abs/2102.11771">arXiv</a>]</li>
