Update photo and news
Signed-off-by: Diogo Luvizon <dluvizon@mpi-inf.mpg.de>

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="inner">
         <a href="#" class="image avatar"><img src="images/photo.jpeg" alt="" /></a>
         <h1>Diogo C Luvizon</h1>
-        <p>Computer Vision Researcher @ MPI-INF</p>
+        <p>Postdoctoral Researcher @ MPI-INF</p>
 
         <nav></br>
           <a href="#vitae">Vitae</a></br>
@@ -86,7 +86,7 @@
         <h2>Research interests</h2>
         <div class="8u 12u$(xsmall) work-item">
           <p class="justified">
-            My research interests are mainly on Computer Vision and Deep Learning, specially applied to 3D scenes and human understanding.
+            My research interests are mainly on Computer Vision and Deep Learning, specially applied to 3D scenes and humans understanding.
           </p>
         </div>
 
@@ -100,7 +100,8 @@
         <h2>News</h2>
         <p class="8u justified">
           <ul class="news">
-            <li>Paper accepted to BMVC 2021! [<a target="_blank" href="https://arxiv.org/abs/2110.09380">arXiv</a>] (project page and demo will be available soon)</li>
+            <li>Four papers accepted in between 2022-2023: <a target="_blank" href="https://link.springer.com/article/10.1007/s11263-021-01570-9">IJCV</a>, <a target="_blank" href="https://openaccess.thecvf.com/content/CVPR2022/papers/Wang_Estimating_Egocentric_3D_Human_Pose_in_the_Wild_With_External_CVPR_2022_paper.pdf">CVPR</a>, <a target="_blank" href="https://arxiv.org/pdf/2210.01692.pdf">VMV</a>, and <a target="_blank" href="https://arxiv.org/pdf/2301.05175.pdf">EUROGRAPHICS</a>.
+            <li>Paper accepted to BMVC 2021! [<a target="_blank" href="https://arxiv.org/abs/2110.09380">arXiv</a>]  [<a target="_blank" href="https://cyclempi.github.io/">Project page</a>]  </li>
             <li>Sep. 2021: I am moving to <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">MPI-INF</a> as a postdoctoral researcher!
             <li>Our WACV'21 paper will be presented at CVPR'21 Workshop "Learning to Generate 3D Shapes and Scenes" [<a target="_blank" href="https://learn3dg.github.io/">workshop</a>]</li>
             <li>Paper accepted to ICASSP 2021! [<a target="_blank" href="https://arxiv.org/abs/2102.11771">arXiv</a>]</li>
@@ -116,7 +117,7 @@
       <!-- Publications -->
       <section id="publications">
         <h2>Publications</h2>
-        <p>Here is a list of my most relevant publications:</p>
+        <p>Here is a list of my most relevant publications: (<b style="color:#ef0000">Outdated!</b> See my <a target="_blank" href="https://people.mpi-inf.mpg.de/~dluvizon/">MPI-INF Page</a> for new publications!)</p>
         <!--<div class="row">-->
         <div>
 
@@ -268,9 +269,9 @@
               <ul class="labeled-icons">
                 <li>
                   <h3 class="icon fa-home"><span class="label">Address</span></h3>
-                  Diogo C. Luvizon<br />
-                  Samsung R&D Institute Brazil<br />
-                  Campinas - SP, Brazil, 13097-104
+                  Diogo C Luvizon<br />
+                  Max-Planck-Institut für Informatik, Germany<br />
+                  Department 6: Visual Computing and Artificial Intelligence
                 </li>
                 <!--<li>-->
                   <!--<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>-->
@@ -299,7 +300,7 @@
             <li><a href="http://lattes.cnpq.br/9871965222373987" target="_blank" class="icon">Lattes<span class="label">Lattes</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Copyright Diogo Carbonera Luvizon, 2021.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Copyright Diogo Carbonera Luvizon, 2023.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
