--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
           </p>
         </div>
 
-        <ul class="actions">
-          <li><a target="_blank" href="data/cv.pdf" class="button">Link to my CV (PDF)</a></li>
-        </ul>
+        <!--<ul class="actions">-->
+          <!--<li><a target="_blank" href="data/cv.pdf" class="button">Link to my CV (PDF)</a></li>-->
+        <!--</ul>-->
       </section>
 
       <!-- News -->
@@ -100,6 +100,7 @@
         <h2>News</h2>
         <p class="8u justified">
           <ul class="news">
+            <li>One paper accepted to Pattern Recognition and one paper accepted to <b>CVPR 2023</b>! [<a target="_blank" href="https://arxiv.org/abs/2009.01998">SSP-Net</a>]  [<a target="_blank" href="https://people.mpi-inf.mpg.de/~jianwang/projects/sceneego/">SceneEgo</a>]  </li>
             <li>Four papers accepted in between 2022-2023: <a target="_blank" href="https://link.springer.com/article/10.1007/s11263-021-01570-9">IJCV</a>, <a target="_blank" href="https://openaccess.thecvf.com/content/CVPR2022/papers/Wang_Estimating_Egocentric_3D_Human_Pose_in_the_Wild_With_External_CVPR_2022_paper.pdf">CVPR</a>, <a target="_blank" href="https://arxiv.org/pdf/2210.01692.pdf">VMV</a>, and <a target="_blank" href="https://arxiv.org/pdf/2301.05175.pdf">EUROGRAPHICS</a>.
             <li>Paper accepted to BMVC 2021! [<a target="_blank" href="https://arxiv.org/abs/2110.09380">arXiv</a>]  [<a target="_blank" href="https://cyclempi.github.io/">Project page</a>]  </li>
             <li>Sep. 2021: I am moving to <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">MPI-INF</a> as a postdoctoral researcher!
