--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 </li>
                 <li>
                   <h3 class="icon fa-language"><span class="label">Language</span></h3>
-                  Fluente in <b>English</b>, <b>French</b>, and <b>Poruguese</b>; basic <b>German</b>
+                  Fluent in <b>English</b>, <b>French</b>, and <b>Portuguese</b>; basic <b>German</b>
                 </li>
               </ul>
             </div>
