--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <header id="header">
       <div class="inner">
         <a href="#" class="image avatar"><img src="images/photo.jpeg" alt="" /></a>
-        <h1>Diogo C Luvizon</h1>
+        <h1>Diogo Carbonera Luvizon</h1>
         <p>Postdoctoral Researcher at <b>MPI-INF</b><br>
           Researcher at <b>VIA Research Center</b><br>
           Ex AI Researcher at <b>Samsung</b>
